Mon Dec 20 04:25:36 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c, vm_core.h, thread.c, intervm.c: rb_queue_t removed also,
	  now signal handlings are done using wormholes.

Mon Dec 20 02:47:38 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c, vm_core.h, thread.c: bytestream reverted.

Fri Dec 17 19:01:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (rb_vm_terminate_all_really_everything): avoid waiting
	  the runnign thread itself.

Fri Dec 17 13:45:32 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* signal.c (ATOMIC_INC, ATOMIC_DEC): uses intervm.h definition.

Fri Dec 17 13:43:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_send): support for immediate values.

	* intervm.c (rb_intervm_wormhole_recv): ditto.

Fri Dec 17 13:10:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c: New class and its implementation.  Much like a pipe,
	  behaves as a inter-VM communicaition channel.

Fri Dec 17 03:48:49 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (Final_intervm): New function to terminate the
	  inter-VM object space.

	* intervm.c (rb_intervm_str): type fix

	* eval.c (ruby_at_exit): typo fix

	* intervm.c (Init_intervm): I thought it needs lock at first, but
	  now the implementation is totally lock-free.

	* eval.c (ruby_at_exit): this case needs recursion.

Fri Dec 17 02:08:21 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/intern.h (ruby_at_exit): process global finish-ups,
	  just like ruby_vm_at_exit.

	* eval.c (ruby_at_exit): but its implementation is totally
	  different.  This is becaus the process global finishups cannot
	  utilize Ruby's object system (because its lifetime is longer
	  than them).

	* eval.c (ruby_finalize): I believe the old implementation was wrong.

	* main.c (main): need a ruby_finalize() call.

Thu Dec 16 07:56:44 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (sym_str_new): Uses intervm string.
